--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,18 @@
-
-language: php
+language: php # language 
 
 php:
-  - '7.1'
-  
+- 7.0
+- 7.1
+
+services:
+- mysql # will init MySQL 
+
 before_script:
-  - composer self-update
-  - composer install --no-interaction
-  - cp .env.travis .env
-  - pear install pear/PHP_CodeSniffer
-  - phpenv rehash
-  - nvm install 7.7.1
-  - npm install npm@latest -g
-  - npm install -g jshint
-  - npm install
-  
-script:
-  - vendor/bin/phpunit --coverage-text
-  - phpcs --ignore=app/Http/Controllers/Auth,app/Http/Controllers/Controller.php app/Http/Controllers
-  - npm run production
-  - jshint resources/assets/js/modules/*
+- cp .env.travis .env # copying .env.travis 
+- mysql -e 'create database testing;' # will run this command
+- composer self-update
+- composer install --no-interaction
+- php artisan key:generate
+- php artisan migrate --seed
+
+
