--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:AxayFZiIT8qp/wDLNTHdaTSsn0OLe3eNoyWtMzxnpcs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
