--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
-language: php # language 
+language: php
 
 php:
-- 7.0
-- 7.1
+  - 7.3
+  - 7.4
 
 services:
 - mysql # will init MySQL 
 
 before_script:
-- cp .env.travis .env # copying .env.travis 
-- mysql -e 'create database testing;' # will run this command
-- composer self-update
-- composer install --no-interaction
-- php artisan key:generate
-- php artisan migrate --seed
+  - mysql -e 'create database stackoverflow;' # will run this command
+  - composer install
+  - cp .env.example .env
+  - php artisan key:generate
+  - php artisan migrate --seed
+
+script:
+  - vendor/bin/phpunit
 
 
